--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             crossorigin="anonymous">
         <link rel="stylesheet" href="./css/style.css">
         <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.32/dist/sweetalert2.min.css">
     </head>
     <body>
         <header>
@@ -193,8 +194,10 @@
 
                     </tbody>
                 </table>
+                <div class="botones">
                 <button class="btn btn-primary" id="btnchao">Ocultar Carrito</button>
-                
+                <button class="btn btn-secondary" id="btnfinal">Comprar</button>
+            </div>
             </div>
         </div>
         </main>
@@ -204,5 +207,7 @@
             integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
             crossorigin="anonymous"></script>
             <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+            <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.32/dist/sweetalert2.all.min.js"></script>
+            <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.32/dist/sweetalert2.all.min.js"></script>
     </body>
 </html>
